--- a/prefeitura.html
+++ b/prefeitura.html
@@ -53,13 +53,13 @@
                             <ul class="funcionarios">
                                 <li class="tree-node">
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/pref-edson.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">EDSON JOSÉ BONA</span>
+                                        <img src="imagens/Carlos-Adriano-Krüger.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Carlos A. Krüger</span>
                                         <p class="node-label-cargo">PRESIDENTE</p>
                                     </a>
                                     <a href="#" class="node-link coordenador">
-                                        <img src="imagens/vice-douglas.jpg" alt="Employee Image" class="node-image">
-                                        <span class="node-label">Douglas Marchetti</span>
+                                        <img src="imagens/Clauder Sérgio Wutke Geike.jpg" alt="Employee Image" class="node-image">
+                                        <span class="node-label">Clauder S. W. Geike</span>
                                         <p class="node-label-cargo">VICE-PRESIDENTE</p>
                                     </a>
                                     <ul class="funcionarios">
@@ -73,49 +73,49 @@
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/adriano-jose.jpg" alt="Employee Image"
+                                                <img src="imagens/Andrea Taise Franz.jpg" alt="Employee Image"
                                                     class="node-image">
-                                                <span class="node-label">Adriano</span>
+                                                <span class="node-label">Andrea</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Rubens-Borchardt.jpeg" alt="Employee Image"
+                                                <img src="imagens/Fabrício Dalcastagné.jpg" alt="Employee Image"
                                                     class="node-image">
-                                                <span class="node-label">Rubens</span>
+                                                <span class="node-label">Fabrício</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
                                         <li class="tree-node">
                                             <a href="#" class="node-link">
-                                                <img src="imagens/Haroldo-Fiebes.jpg" alt="Employee Image"
-                                                    class="node-image">
-                                                <span class="node-label">Haroldo</span>
-                                                <p class="node-label-cargo">VEREADOR</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/Carlos-Adriano-Krüger.jpg" alt="Employee Image"
-                                                    class="node-image">
-                                                <span class="node-label">Carlos</span>
-                                                <p class="node-label-cargo">VEREADOR</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/Gilmara-Maria-Baddaratz-Giotti.jpg"
-                                                    alt="Employee Image" class="node-image">
-                                                <span class="node-label">Gilmara</span>
-                                                <p class="node-label-cargo">VEREADORA</p>
-                                            </a>
-                                        </li>
-                                        <li class="tree-node">
-                                            <a href="#" class="node-link">
-                                                <img src="imagens/Flávio-Germano-Buzzi.jpg" alt="Employee Image"
+                                                <img src="imagens/Flávio Ribeiro.jpg" alt="Employee Image"
                                                     class="node-image">
                                                 <span class="node-label">Flávio</span>
+                                                <p class="node-label-cargo">VEREADOR</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/Jonas Weege.jpg" alt="Employee Image"
+                                                    class="node-image">
+                                                <span class="node-label">Jonas</span>
+                                                <p class="node-label-cargo">VEREADOR</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/Joselito.png"
+                                                    alt="Employee Image" class="node-image">
+                                                <span class="node-label">Joselito</span>
+                                                <p class="node-label-cargo">VEREADOR</p>
+                                            </a>
+                                        </li>
+                                        <li class="tree-node">
+                                            <a href="#" class="node-link">
+                                                <img src="imagens/Thelma de Souza Lenzi.jpg" alt="Employee Image"
+                                                    class="node-image">
+                                                <span class="node-label">Thelma</span>
                                                 <p class="node-label-cargo">VEREADOR</p>
                                             </a>
                                         </li>
