--- a/prefeitura.html
+++ b/prefeitura.html
@@ -240,13 +240,13 @@
                             <li class="tree-node">
                                 <a href="#" class="node-link setor">
                                     <img src="imagens/sec-cultura.png" alt="Setor Image" class="node-image">
-                                    <span class="node-label">Cultura e Esportes</span>
+                                    <span class="node-label">Cultura e Turismo</span>
                                 </a>
                                 <ul class="funcionarios">
                                     <li class="tree-node">
                                         <a href="#" class="node-link">
-                                            <img src="imagens/sec-marlon.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">Marlon Rahn</span>
+                                            <img src="imagens/Cristiano Florêncio.png" alt="Employee Image" class="node-image">
+                                            <span class="node-label">Cristiano Florêncio</span>
                                             <p class="node-label-cargo">SECRETÁRIO</p>
                                         </a>
                                     </li>
