--- a/index.html
+++ b/index.html
@@ -431,13 +431,6 @@
                                     <p class="node-label-cargo">SERVIDORA</p>
                                 </a>
                                 <ul class="funcionarios">
-                                    <li class="tree-node">
-                                        <a href="#" class="node-link funcionario">
-                                            <img src="imagens/josé.jpg" alt="Employee Image" class="node-image">
-                                            <span class="node-label">José Davi</span>
-                                            <p class="node-label-cargo">SERVIDOR</p>
-                                        </a>
-                                        <ul class="sub-funcionarios">
                                             <li class="tree-node-matutino">
                                                 <a href="#" class="node-link">
                                                     <img src="imagens/bruna-aleiara.jpeg" alt="Employee Image"
@@ -478,8 +471,7 @@
                                     </li>
                                 </ul>
                             </li>
-                        </ul>
-                    </li> <!--UNIDADE DE CONCILIAÇÃO-->
+                     <!--UNIDADE DE CONCILIAÇÃO-->
                     <!--AUX. SERVIÇOS GERAIS-->
                     <li class="tree-node">
                         <a href="#" class="node-link setor">
